# linear_regression

./: linear_regression.ipynb  pyproject.toml
.ipynb_checkpoints/: linear_regression-checkpoint.ipynb
